Persistencia de datos Room (II) - Guardar puntuación

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -4,7 +4,7 @@
 
     <PreferenceCategory app:title="@string/prefTituloCategoria1">
         <EditTextPreference
-            app:key="nombreJugador"
+            app:key="@string/key_NombreJugador"
             app:title="@string/prefTituloNombreJugador"
             app:summary="@string/prefTextoNombreJugador" />
     </PreferenceCategory>
