--- a/app/src/main/res/layout/activity_detalle_result.xml
+++ b/app/src/main/res/layout/activity_detalle_result.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".ListResultsActivity"
+    android:id="@+id/activity_detalle_result">
+
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Delete Results" />
+        <!--android:onClick="Delete" -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,14 +52,6 @@
         android:id="@+id/lvListResults"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="match_parent"
-        android:layout_height="219dp"
-        android:onClick="Delete"
-        android:text="Delete Results" />
 
 
 </LinearLayout>
