--- a/app/src/main/res/layout/activity_detalle_result.xml
+++ b/app/src/main/res/layout/activity_detalle_result.xml
@@ -2,11 +2,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListResultsActivity"
-    android:id="@+id/activity_detalle_result">
+    android:id="@+id/activity_detalle_result"
+    tools:context=".ListResultsActivity">
 
 
     <Button
@@ -51,7 +52,7 @@
     <ListView
         android:id="@+id/lvListResults"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="fill_parent" />
 
 
 </LinearLayout>
