--- a/app/src/main/res/layout/activity_detalle_result.xml
+++ b/app/src/main/res/layout/activity_detalle_result.xml
@@ -14,8 +14,9 @@
         android:id="@+id/btnDelete"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:onClick="Delete"
         android:text="Delete Results" />
-        <!--android:onClick="Delete" -->
+
 
     <LinearLayout
         android:layout_width="match_parent"
