--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -219,4 +219,14 @@
             android:layout_toRightOf="@id/p63" />
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvBarraFichas"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        android:textSize="21sp"
+        android:textColor="@android:color/holo_green_dark"/>
+
 </LinearLayout>
